--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,3 +1,6 @@
+permissions:
+  contents: write
+
 name: Update Ranking
 
 on:
@@ -10,6 +13,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      with:
+    token: ${{ secrets.GITHUB_TOKEN }}
+
       - uses: actions/setup-python@v5
         with:
           python-version: "3.10"
